<resources>
    <string name="app_name">搅拌站全生命周期系统</string>

    <string name="title_activity_main">主页</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">设置</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="you_have_news_messages">你有%s条最新消息</string>

    <string name="tip_save_image_suc">图片已保存(手机相册-> xcmgxs_img)</string>
    <string name="tip_save_image_faile">无法保存图片</string>
    <string name="tip_load_image_faile">加载图片失败</string>

    <string name="main_menu_login_tips">点击登录</string>
    <string name="main_menu_title_projects">项目汇总</string>
    <string name="main_menu_title_schedule">项目进度</string>
    <string name="main_menu_title_logs">项目日志</string>
    <string name="main_menu_title_notice">通知</string>
    <string name="main_menu_title_issues">质量反馈</string>
    <string name="main_menu_title_files">项目附件</string>
    <string name="main_menu_title_setting">设置</string>
    <string name="main_menu_title_about">关于</string>

    <string name="msg_load_userface_fail">加载头像失败</string>
    <string name="msg_load_image_fail">加载图像失败</string>

    <string name="login_title">搅拌站全生命周期系统</string>
    <string name="login_btn">登录</string>
    <string name="login_account">帐号</string>
    <string name="login_account_hint">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_password_hint">密码</string>
    <string name="login_tips">正在登录...</string>
    <string name="main_menu_logout">注销登录</string>
    <string name="main_menu_login">用户登录</string>
    <string name="list_empty_hint">暂无数据</string>
    <string name="avatar">Avatar</string>
    <string name="title_activity_project">ProjectActivity</string>
    <string name="title_activity_project_logs">ProjectLogsActivity</string>
    <string name="title_activity_log_edit">项目日志</string>

    <string name="img_from_camera">手机拍照</string>
    <string name="img_from_album">手机相册</string>
    <string name="ui_insert_image">插入图片</string>
    <string name="title_activity_user_info">用户信息</string>
    <string name="title_activity_my_self_info">我的信息</string>
    <string name="title_activity_project_issue">项目问题反馈</string>
    <string name="title_activity_issue_edit">质量反馈</string>
    <string name="title_activity_project_edit">项目状态</string>
    <string name="title_activity_project_state_edit">项目状态</string>
    <string name="title_activity_about">关于</string>
    <string name="title_activity_notification">通知</string>
    <string name="title_activity_welcome_page">WelcomePage</string>
    <string name="title_activity_splash_page">SplashPage</string>
    <string name="title_activity_app_start">AppStart</string>
    <string name="title_activity_search">搜索</string>
    <string name="title_activity_setting">设置</string>


    <string name="enhance_list_empty_data">暂无数据</string>
    <string name="enhance_list_header_pull_text">下拉刷新</string>
    <string name="enhance_list_header_release_text">松开刷新</string>
    <string name="enhance_list_header_refreshing_text">刷新中…</string>
    <string name="enhance_list_header_refresh_success_text">刷新成功</string>
    <string name="enhance_list_footer_more_text">点击加载更多</string>
    <string name="enhance_list_footer_loading_text">加载中…</string>
    <string name="enhance_list_footer_no_more_text">已加载全部</string>



    <string name="sem_watch">\uf06e</string>
    <string name="sem_empty_watch">\uf070</string>
    <string name="sem_star">\uf005</string>
    <string name="sem_empty_star">\uf006</string>
    <string name="sem_fork">\uf126</string>
    <string name="sem_tag">\uf02b</string>
    <string name="sem_lock">\uf023</string>
    <string name="sem_user">\uf007</string>
    <string name="sem_wait">\uf017</string>
    <string name="sem_loading">\uf110</string>
    <string name="sem_folder">\uf07b</string>
    <string name="sem_file_text">\uf0f6</string>
    <string name="sem_download_disk">\uf019</string>


    <string name="fa_wifi">\uf1eb</string>
    <string name="fa_refresh">\uf021</string>
    <string name="fa_clock_o">\uf017</string>
    <string name="title_activity_project_info">项目信息</string>
    <string name="title_activity_project_report">项目报表</string>
    <string name="title_activity_project_list">项目列表</string>
    <string name="title_activity_project_report_list">项目列表</string>
    <string name="title_activity_doc_edit">发送单据</string>
    <string name="title_activity_image_preview">图片预览</string>
    <string name="title_activity_notification_detail">通知</string>
    <string name="title_activity_project_stat">项目信息汇总</string>
    <string name="title_activity_project_state">状态分类列表</string>
    <string name="title_activity_project_doc">ProjectDocActivity</string>
    <string name="title_activity_send_issue_edit">SendIssueEditActivity</string>


</resources>
