<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/menu_item_projects"
        style="@style/MenuItemLayoutStyle">
        
        <ImageView
            style="@style/MenuItemImageViewStyle"
            android:contentDescription="@string/img_description"
            android:background="@drawable/menu_icon_explore" />

        <TextView
            style="@style/MenuItemTextViewStyle"
            android:text="@string/main_menu_title_projects" />

        </LinearLayout>

    <include layout="@layout/horizontal_divider_view"></include>

    <LinearLayout
        android:id="@+id/menu_item_logs"
        style="@style/MenuItemLayoutStyle">

        <ImageView
            style="@style/MenuItemImageViewStyle"
            android:contentDescription="@string/img_description"
            android:background="@drawable/more_menu_icon_edit" />

        <TextView
            style="@style/MenuItemTextViewStyle"
            android:text="@string/main_menu_title_logs" />

        </LinearLayout>

    <include layout="@layout/horizontal_divider_view" />
    <LinearLayout
        android:id="@+id/menu_item_issues"
        style="@style/MenuItemLayoutStyle" >

        <ImageView
            style="@style/MenuItemImageViewStyle"
            android:contentDescription="@string/img_description"
            android:background="@drawable/menu_icon_language" />

        <TextView
            style="@style/MenuItemTextViewStyle"
            android:text="@string/main_menu_title_issues" />
    </LinearLayout>

    <include layout="@layout/horizontal_divider_view" />

    <LinearLayout
        android:id="@+id/menu_item_files"
        style="@style/MenuItemLayoutStyle" >

        <ImageView
            style="@style/MenuItemImageViewStyle"
            android:contentDescription="@string/img_description"
            android:background="@drawable/more_menu_icon_copy" />

        <TextView
            style="@style/MenuItemTextViewStyle"
            android:text="@string/main_menu_title_files" />
    </LinearLayout>

    <include layout="@layout/horizontal_divider_view" />

    <LinearLayout
        android:id="@+id/menu_item_setting"
        style="@style/MenuItemLayoutStyle" >

        <ImageView
            style="@style/MenuItemImageViewStyle"
            android:contentDescription="@string/img_description"
            android:background="@drawable/menu_icon_set" />

        <TextView
            style="@style/MenuItemTextViewStyle"
            android:text="@string/main_menu_title_setting" />
    </LinearLayout>

    <include layout="@layout/horizontal_divider_view" />

    <LinearLayout
        android:id="@+id/menu_item_exit"
        style="@style/MenuItemLayoutStyle" >

        <ImageView
            style="@style/MenuItemImageViewStyle"
            android:contentDescription="@string/img_description"
            android:background="@drawable/menu_icon_qiut" />

        <TextView
            style="@style/MenuItemTextViewStyle"
            android:text="@string/main_menu_title_about" />
    </LinearLayout>

    <include layout="@layout/horizontal_divider_view" />
</LinearLayout>